---------------------------------------------------------------------------------------------------
Version: 0.00.4
Date: 2020.06.11
  Changes:
    - Set minimum version for Base to 0.18.31
    - Consolidated setup_masked_icon, setup_flat_icon, setup_standard_icon into construct_icon
---------------------------------------------------------------------------------------------------
Version: 0.00.3
Date: 2020.06.11
  Changes:
    - Added "homepage" property to info.json
    - Added function "store_icons" to collate icon setup parameters for later assignment in data-final-fixes by originating mod
---------------------------------------------------------------------------------------------------
Version: 0.00.2
Date: 2020.06.08
  Changes:
    - Renamed from "Core Library" to "Function Library"
    - Added means to disable icon mask tinting in setup_masked_icon
---------------------------------------------------------------------------------------------------
Version: 0.00.1
Date: 2020.06.06
  Features:
    - Initial Beta Release